# learning

./: .gitignore  README.md
aind/AIND-Isolation/: competition_agent.py  game_agent.py  heuristic_analysis.odt  research_review.odt
aind/AIND-Planning/: .~lock.heuristic_analysis.odt#  heuristic_analysis.odt  my_air_cargo_problems.py  my_planning_graph.py  research_review.odt  search_script.sh
aind/AIND-Sudoku/: README.md  solution.py
aind/AIND-VUI-Capstone/: sample_models.py  vui_notebook.html  vui_notebook.ipynb
aind/aind2-nlp-capstone/: machine_translation.ipynb
aind/aind2-rnn/: RNN_project.html  RNN_project.ipynb  my_answers.py  requirements.txt
aind/dog-project/: dog_app.ipynb  report.html
ainfosec/: curlbrute.sh  script.py
cpp/: README.md
cpp/firstProgram/: Makefile  main.cc
cpp/linkFiles/: Makefile  main.cc
cpp/pointerLand/: Makefile
crystal/starter/: LICENSE  README.md  shard.yml
ruby/Ruby-Calculator/: README.md  calc.rb  scan.rb
rust/advent/: Cargo.toml
rust/advent2019/: Cargo.toml
rust/advent2020/: Cargo.toml
rust/advent2020/advent2020inputs/: day12_test2.txt  day13_test.txt
rust/advent2020/outputs/: day12
rust/advent2020/src/: challenges.rs  lib.rs  main.rs
rust/advent2020/src/challenges/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day16.rs  day2.rs  day24.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  template.rs
rust/advent_2020/: Cargo.toml
rust/guessing_game/: Cargo.toml
rust/playground/: Cargo.toml
rust/restaurant/: Cargo.toml
rust/struct_example/: Cargo.toml
(+221 files in other folders)
