[package]
name = "advent2020"
version = "0.1.0"
authors = ["JuiMin <d95wang@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2"

[lib]
name = "adventlib"
path = "src/lib.rs"

[[bin]]
name = "advent2020"
path = "src/main.rs"